--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -444,14 +444,14 @@ other administrative tasks. Paxos can achieve high performance by pipelining:
 starting work on new requests before existing requests have completed, but
 typically limits the length of the pipeline to support dynamic reconfiguration.
 If the pipeline is too long then a reconfiguration may take a long time to
-complete. On the other hand if the pipeline is too short then it may stall when
-the system is being reconfigured which can be observed as jitter in the rate
-that the system makes progress. This paper shows that the algorithm can be
-modified to support dynamic reconfigurations with an unbounded pipeline as long
-as the reconfigurations are sufficiently small, and gives a simple
-characterisation of a set of sufficiently small reconfigurations that is useful
-in practice. It also shows that an arbitrary reconfiguration can be performed
-in a single step by temporarily limiting the pipeline length.\end{abstract}
+complete, but if it too short then it may stall when the system is being
+reconfigured which can be observed as jitter in the rate that the system makes
+progress. This paper shows that the algorithm can be modified to support
+dynamic reconfigurations with an unbounded pipeline as long as the
+reconfigurations are sufficiently small, and gives a simple characterisation of
+a set of sufficiently small reconfigurations that is useful in practice. It
+also shows that an arbitrary reconfiguration can be performed in a single step
+by temporarily limiting the pipeline length.\end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
 %\begin{IEEEkeywords} TODO???
