Added version number 00...00

--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -381,6 +381,9 @@
 Tracsis plc, 103 Clarendon Road, Leeds LS2 9DF, United Kingdom (email:
 d.turner@tracsis.com)
 }% <-this % stops a space
+\thanks{Unpublished draft version
+0000000000000000000000000000000000000000
+}%
 %\thanks{Manuscript received April 19, 2005; revised August 26, 2015.}} TODO
 }
 
